H.U.1 - mostrar tutorial solo con html

--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <html>
   <body>
-    <h1>Sumador</h1>
-    <form id="sumar-form">
-      <label for="primer-numero">Primer número:</label>
-      <input type="number" id="primer-numero" />
-      <label for="segundo-numero">Segundo número:</label>
-      <input type="number" id="segundo-numero" />
-      <input type="submit" value="Sumar" />
+    <center>
+      <h1>WORDLE</h1>
+    <form id="tutorial">
+     <h1> COMO JUGAR <br></h1>
+     <h1><font face="Comic Sans MS">
+        - Adivina la palabra<br>
+        - La palabra consta de 5 letras <br>
+        - Se mostrara una pista para que se acerque a la respuesta <br></h1>
+        <a href="index2.html">
+          <input type="button" value="INICIAR" />
+        </a>
+        </font>
     </form>
     <div id="resultado-div"></div>
-
+    <div id="contar"></div>
     <script type="module" src="./src/presenter.js"></script>
+  </center>
   </body>
 </html>
