Comprobar si todas las letras son correctas y si no lo son es vacio , tambien se muestra ya la iterfaz de usuario

--- a/index2.html
+++ b/index2.html
@@ -4,11 +4,11 @@
     <form id="Adivinar-form">
       <label for="palabra-adivinar">Palabra:</label>
       <input id="palabra-adivinar" type="text"/>
-
       <input type="submit" value="ADIVINAR" id="boton-adivinar" />
     </form>
     <div id="resultado-div"></div>
     <div id="contar"></div>
+    <div id="letras-div"></div>
     <script type="module" src="./src/presenter.js"></script>
   </body>
 </html>
