corregir html y test de letras incorrectas

--- a/index2.html
+++ b/index2.html
@@ -9,6 +9,7 @@
     <div id="resultado-div"></div>
     <div id="contar"></div>
     <div id="letras-div"></div>
+    <div id="letras-incorrectas"></div>
     <script type="module" src="./src/presenter.js"></script>
   </body>
 </html>
