--- a/index2.html
+++ b/index2.html
@@ -10,6 +10,7 @@
     <div id="contar"></div>
     <div id="letras-div"></div>
     <div id="letras-incorrectas-div"></div>
+    <div id="letras-no-existen-div"></div>
     <script type="module" src="./src/presenter.js"></script>
   </body>
 </html>
