--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
   <body>
     <center>
-      <h1>WORDLE</h1>
+    <h1><font face="Comic Sans MS"> ---WORDLE--- </font></h1>
     <form id="tutorial">
-     <h1> COMO JUGAR <br></h1>
+      <h1><font face="Comic Sans MS"> COMO JUGAR </font></h1>
      <h1><font face="Comic Sans MS">
         - Adivina la palabra<br>
-        - La palabra consta de 5 letras <br>
+        - La palabra consta de N letras <br>
         - Se mostrara una pista para que se acerque a la respuesta <br></h1>
         <a href="index2.html">
           <input type="button" value="INICIAR" />
