--- a/index2.html
+++ b/index2.html
@@ -1,6 +1,8 @@
 <html>
   <body>
-    <h1>WORDLE</h1>
+    <center>
+      <h1><font face="Comic Sans MS"> ---WORDLE--- </font></h1>
+    <h1>La palabra tiene 5 letras</h1>
     <form id="Adivinar-form">
       <label for="palabra-adivinar">Palabra:</label>
       <input id="palabra-adivinar" type="text"/>
@@ -13,4 +15,5 @@
     <div id="letras-no-existen-div"></div>
     <script type="module" src="./src/presenter.js"></script>
   </body>
+</center>
 </html>
