1. Pruebas de interfaz de usuario, titulo y devolver palabra correcta si la palabra es incorrecta

--- a/index2.html
+++ b/index2.html
@@ -1,10 +1,10 @@
 <html>
   <body>
     <center>
-      <h1><font face="Comic Sans MS"> ---WORDLE--- </font></h1>
+      <h1 id = "titulo">---WORDLE---</h1>
     <h1>La palabra tiene 5 letras</h1>
     <form id="Adivinar-form">
-      <label for="palabra-adivinar">Palabra:</label>
+      <label for="palabra-adivinar12">Palabra:</label>
       <input id="palabra-adivinar" type="text"/>
       <input type="submit" value="ADIVINAR" id="boton-adivinar" />
     </form>
