Mostrar un mensaje que perdiste el juego

--- a/index2.html
+++ b/index2.html
@@ -1,8 +1,9 @@
 <html>
   <body>
     <center>
-      <h1 id = "titulo">---WORDLE---</h1>
-    <h1>La palabra tiene 5 letras</h1>
+     <h1 id = "titulo">---WORDLE---</h1>
+     <h1>La palabra tiene 5 letras</h1>
+     <div id="intentos-div"></div>
     <form id="Adivinar-form">
       <label for="palabra-adivinar12">Palabra:</label>
       <input id="palabra-adivinar" type="text"/>
@@ -13,6 +14,7 @@
     <div id="letras-div"></div>
     <div id="letras-incorrectas-div"></div>
     <div id="letras-no-existen-div"></div>
+    <div id="mensaje-div"></div>
     <script type="module" src="./src/presenter.js"></script>
   </body>
 </center>
