--- a/index2.html
+++ b/index2.html
@@ -1,14 +1,17 @@
 <html>
   <body>
+    <link rel="stylesheet" href="style.css">
     <center>
      <h1 id = "titulo">---WORDLE---</h1>
      <h1>La palabra tiene 5 letras</h1>
      <div id="intentos-div"></div>
+  
     <form id="Adivinar-form">
       <label for="palabra-adivinar12">Palabra:</label>
       <input id="palabra-adivinar" type="text"/>
       <input type="submit" value="ADIVINAR" id="boton-adivinar" />
     </form>
+
     <div id="resultado-div"></div>
     <div id="contar"></div>
     <div id="letras-div"></div>
