--- a/index2.html
+++ b/index2.html
@@ -19,5 +19,9 @@
     <div id="mensaje-div"></div>
     <script type="module" src="./src/presenter.js"></script>
   </body>
+  <form id="pistas-form">
+    <div id="pistas-div"></div>
+    <input type="submit" value="Pistas" id="boton-pistas"/>
+  </form>
 </center>
 </html>
