--- a/index2.html
+++ b/index2.html
@@ -1,4 +1,4 @@
-<html>
+[9:33 a. m., 31/5/2022] Adriana Tarquino UCB: <html>
   <body>
     <center>
      <h1 id = "titulo">---WORDLE---</h1>
@@ -13,15 +13,14 @@
 
     <div id="resultado-div"></div>
     <div id="contar"></div>
+    <label for="letras-correctas">Letras que estan en la palabra en la posición correcta: </label>
     <div id="letras-div"></div>
     <div id="letras-incorrectas-div"></div>
+    <label>Letras que estan en la palabra pero en la posición incorrecta:</label>
     <div id="letras-no-existen-div"></div>
+    <label>Letras que NO estan en la palabra a adivinar: </label>
     <div id="mensaje-div"></div>
     <script type="module" src="./src/presenter.js"></script>
   </body>
-  <form id="pistas-form">
-    <div id="pistas-div"></div>
-    <input type="submit" value="Pistas" id="boton-pistas"/>
-  </form>
 </center>
 </html>
