botones de categoria

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
      <h1><font face="Comic Sans MS">
         - Adivina la palabra<br>
         - La palabra consta de N letras <br>
-        - Se mostrara una pista para que se acerque a la respuesta <br></h1>
+        - El juego tiene 3 intentos <br>
+        - Se mostrara una pista para que se acerque a la respuesta <br>
+        - Se mostrara las pistas anteriores al lado de la pista actual <br>
+      </h1>
         <a href="index2.html">
           <input type="button" value="INICIAR" />
         </a>
