--- a/index2.html
+++ b/index2.html
@@ -4,9 +4,16 @@
      <h1 id = "titulo">---WORDLE---</h1>
      <h1>La palabra tiene 5 letras</h1>
      <div id="intentos-div"></div>
-  
+  </center>
+
+  <center>
+      <input type="submit" value="Primera Categoria" id="boton-adivinar" />
+      <input type="submit" value="Segunda Categoria" id="boton-adivinar" />
+  </center>
+
+  <center>      
     <form id="Adivinar-form">
-  
+      <h1> __________________________________</h1>
       <label for="palabra-adivinar12">Palabra:</label>
       <input id="palabra-adivinar" type="text"/>
       <input type="submit" value="ADIVINAR" id="boton-adivinar" />
