--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
           - Se mostrara las pistas anteriores al lado de la pista actual <br />
         </h1>
         <select name="ctg" id="seleccionCategoria" class="custom-select">
-          <!-- funcion donde se vera las categorias de forma dinamica -->
+          <option select="select" value="frutas">Elija una categoria</option>
+          <option value="frutas">Frutas</option>
+          <option value="Ingredientes">Ingredientes</option>
         </select>
         <br />
         <br />
