--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <html>
   <body>
+    <body style="background-color:#4bc9da;">
+    </body>
     <center>
-      <h1>---WORDLE---</h1>
+      <h1 style="background-color:#7fda4b" id = "titulo">---WORDLE---</h1>
       <form id="tutorial">
         <h1>COMO JUGAR</h1>
         <h1>
           - Adivina la palabra<br />
-          - La palabra consta de N letras <br />
+          - La palabra consta de 5 letras <br />
           - El juego tiene 3 intentos <br />
           - Se mostrara una pista para que se acerque a la respuesta <br />
           - Se mostrara las pistas anteriores al lado de la pista actual <br />
         </h1>
         <select name="ctg" id="seleccionCategoria" class="custom-select">
-          <option select="select" value="frutas">Elija una categoria</option>
+          <option select="select" value="frutas"><h1>Elija categoria</h1></option>
           <option value="frutas">Frutas</option>
           <option value="Ingredientes">Ingredientes</option>
         </select>
