--- a/index2.html
+++ b/index2.html
@@ -1,34 +1,28 @@
 <html>
+  <body style="background-color:#4bc9da;">
+  </body>
   <body>
     <center>
-     <h1 id = "titulo">---WORDLE---</h1>
+     <h1 style="background-color:#7fda4b" id = "titulo">---WORDLE---</h1>
      <h1>La palabra tiene 5 letras</h1>
      <div id="intentos-div"></div>
   </center>
 
-  <center>
-      <input type="submit" value="Primera Categoria" id="boton-adivinar" />
-      <input type="submit" value="Segunda Categoria" id="boton-adivinar" />
-      <br />
-      <br />
-  </center>
-
   <center>      
     <form id="Adivinar-form">
-      <!-- <h1> __________________________________</h1> -->
-      <label for="palabra-adivinar12">Palabra:</label>
+      <label for="palabra-adivinar12"> Palabra:</label>
       <input id="palabra-adivinar" type="text"/>
       <input type="submit" value="ADIVINAR" id="boton-adivinar" />
     </form>
 
     <div id="resultado-div"></div>
     <div id="contar"></div>
-    <label for="letras-correctas">Letras que estan en la palabra en la posición correcta: </label>
+    <label for="letras-correctas"><h1> Letras que estan en la palabra en la posición correcta:  </h1> </label>
     <div id="letras-div"></div>
     <div id="letras-incorrectas-div"></div>
-    <label>Letras que estan en la palabra pero en la posición incorrecta:</label>
+    <label> <h1>Letras que estan en la palabra pero en la posición incorrecta: </h1></label>
     <div id="letras-no-existen-div"></div>
-    <label>Letras que NO estan en la palabra a adivinar: </label>
+    <label><h1>Letras que no estan en la palabra a adivinar: </h1></label>
     <div id="mensaje-div"></div>
     <script type="module" src="./src/presenter.js"></script>
   </body>
