--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <center>
       <h1 style="background-color:#7fda4b" id = "titulo">---WORDLE---</h1>
       <form id="tutorial">
-        <h1>COMO JUGAR</h1>
+        <h1 style="background-color:#da684b">COMO JUGAR</h1>
         <h1>
           - Adivina la palabra<br />
           - La palabra consta de 5 letras <br />
